Namespace conversion. Removed presentation components.

--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Spark.Html" version="1.0.5141.21250" targetFramework="net45" />
-  <package id="Spark.Sitecore" version="1.0.5141.22776" targetFramework="net45" />
+  <package id="Constellation.Sitecore" version="1.0.5189.27028" targetFramework="net45" />
 </packages>
