--- a/.gitignore
+++ b/.gitignore
@@ -45,12 +45,9 @@ Thumbs.db
 !/TDS.*/*.scproj
 !/TDS.*/Code Generation Templates
 
-#Glass Specific
-/*.Data/*.Items.cs
-/*.Data/*.Items.*.cs
-/*.Data/Items.cs
-
-#Diamond Specific
+#Constellation.Sitecore.Items Specific
 /*.Data/Items/_Generated.cs
 
 *.nupkg
+
+/_Binaries
