--- a/Constellation.Sitecore.Items.nuspec
+++ b/Constellation.Sitecore.Items.nuspec
@@ -16,7 +16,7 @@
 
 		Using Constellation.Sitecore.Items makes Sitecore Items suitable for use with type-driven IoC or Dependency Injection scenarios, such as MVC/MVP and MVVM patterns.
 	</description>
-	<releaseNotes>Added PDB for easier debugging.</releaseNotes>
+	<releaseNotes>Added explicit GetField by ID support to StandardTemplate</releaseNotes>
 	<copyright>Copyright 2014</copyright>
 	<tags>Sitecore</tags>
   </metadata>
